# hexlet-my-first-workflow

./: README.md  pyproject.toml
.github/workflows/: hello-world.yml
