[tool.poetry]
name = "package-1"
version = "0.1.0"
description = ""
authors = ["Alexander <alexzhur87@mail.ru>"]
readme = "README.md"
packages = [{include = "package_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
